drop iframe and worker since we have messageport. drop index_browser.ts since we dont need it now

--- a/duplex/Makefile
+++ b/duplex/Makefile
@@ -1,16 +1,18 @@
-.PHONY: npm
 
 build: dist/duplex.js  dist/duplex.min.js
+.PHONY: build
 
 npm:
-	deno run -A scripts/build_npm.ts 0.1.0
+	deno run -A scripts/build_npm.ts 0.2.0
+.PHONY: npm
 
 clobber:
 	rm -rf ./dist
+.PHONY: clobber
 
 dist/duplex.js: **.ts
 	mkdir -p dist
-	esbuild index_browser.ts --bundle --format=esm --outfile=./dist/duplex.js 
+	esbuild index.ts --bundle --format=esm --outfile=./dist/duplex.js 
 
 dist/duplex.min.js: **.ts
-	esbuild index_browser.ts --bundle --format=esm --outfile=./dist/duplex.min.js --minify
+	esbuild index.ts --bundle --format=esm --outfile=./dist/duplex.min.js --minify
