set up for future publishing to npm

--- a/duplex/Makefile
+++ b/duplex/Makefile
@@ -6,8 +6,13 @@ npm:
 	deno run -A scripts/build_npm.ts 0.2.0
 .PHONY: npm
 
+publish: npm
+	cd npm && npm publish --access public
+.PHONY: publish
+
 clobber:
 	rm -rf ./dist
+	rm -rf ./npm
 .PHONY: clobber
 
 dist/duplex.js: **.ts
